gdb/python/lib/gdb/dap/__init__.py
@@ -71,3 +71,17 @@ def run():
     # Note the inferior output is opened in text mode.
     server = Server(open(saved_in, "rb"), open(saved_out, "wb"), open(rfd, "r"))
     startup.start_dap(server.main_loop)
+
+
+# Whether the interactive session has started.
+session_started = False
+
+
+def pre_command_loop():
+    global session_started
+    if not session_started:
+        # The pre_command_loop interpreter hook can be called several times.
+        # The first time it's called, it means we're starting an interactive
+        # session.
+        session_started = True
+        startup.dap_log.session_started()
